stuck on issue with large photo and medium and large sizes

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,34 +1,64 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 body {
-  background-color: #757575;
+  background-color: #orange;
   font-family: 'Roboto', sans-serif;
 }
 
-.larger-box {
-  background-color: black;
-  height: 50vh;
-  width:  100%;
-  margin-bottom: 2vh;
+.container {
+  margin: 1vw 0 1vw 0 auto;
 }
 
-.smaller-box {
-  background-color: white;
-  height: 20vh;
+.row {
   margin-bottom: 2vh;
+  padding: 1vh 1vw 1vh 1vw;
+}
+
+.large-div {
+  /*margin: 1vh 1vw 1vh 1vw;*/
+  background-color: black;
+  height: 100%;
+  width:  100%;
+  /*margin-bottom: 2vh;*/
+}
+
+.small-div {
+  /*margin: 1vh 1vw 1vh 1vw;*/
+  background-color: white;
+  height: 25vh;
+  /*width: 50vw;*/
+  text-align: center;
+}
+
+.largepic {
+  /*width: 100%;*/
+  height: 100%;
+}
+
+.smallpic {
   width: 100%;
+  height: 100%;
 }
 
 @media screen and (min-width: 601px) and (max-width: 992px) {
-  .smaller-box {
-    height: 45vh;
+  .small-div {
+    height: 50vh;
+  }
+  .large-div {
+    height: 50vh;
+  }
+  .largepic {
+    height: 100%;
   }
 }
 
 @media screen and (min-width: 993px) {
-  .smaller-box {
+  .small-div {
     height: 50vh;
     width: 30vh;
+  }
+  .large-div {
+    height: 50vh;
   }
 
 }
